--- a/Tree_classifier_notebook.ipynb
+++ b/Tree_classifier_notebook.ipynb
@@ -31,7 +31,7 @@
    },
    "outputs": [],
    "source": [
-    "learn_inf = load_learner(path/'export_tree.pkl', cpu=True)\n",
+    "learn_inf = load_learner(path/'export.pkl', cpu=True)\n",
     "btn_upload = widgets.FileUpload()\n",
     "out_pl = widgets.Output()\n",
     "lbl_pred = widgets.Label()\n",
