--- a/Tree_classifier_notebook.ipynb
+++ b/Tree_classifier_notebook.ipynb
@@ -31,6 +31,7 @@
    },
    "outputs": [],
    "source": [
+   "path = Path()\n",
     "learn_inf = load_learner(path/'export.pkl', cpu=True)\n",
     "btn_upload = widgets.FileUpload()\n",
     "out_pl = widgets.Output()\n",
