--- a/Tree_classifier_notebook.ipynb
+++ b/Tree_classifier_notebook.ipynb
@@ -31,21 +31,12 @@
    },
    "outputs": [],
    "source": [
-   "path = Path()\n",
+    "path = Path()\n",
     "learn_inf = load_learner(path/'export.pkl', cpu=True)\n",
     "btn_upload = widgets.FileUpload()\n",
     "out_pl = widgets.Output()\n",
     "lbl_pred = widgets.Label()\n",
     "btn_run = widgets.Button(description='Classify')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "E-hbgKxl775D"
-   },
-   "source": [
-    "When clicked"
    ]
   },
   {
@@ -62,7 +53,7 @@
     "    out_pl.clear_output()     \n",
     "    with out_pl: display(img.to_thumb(128,128))     \n",
     "    pred,pred_idx,probs = learn_inf.predict(img)    \n",
-    "    lbl_pred.value = f'Prediction: {pred} | Probability: {probs[pred_idx]:.04f}'"
+    "    lbl_pred.value = f'::RESULT:: Prediction: {pred} | Probability: {probs[pred_idx]:.04f}'"
    ]
   },
   {
